# SynopticCharts

./: .gitignore  CLI_README.md  LICENSE  README.md  pyproject.toml
docs/: accumulated.yaml  configuration.md
examples/: README.md  basic_chart.py  custom_region.py  high_quality.yaml  quick_preview.yaml  side_by_side_video.py  validate_output.py  video_generation.py
synoptic_charts/: __init__.py  api.py  batch.py  cli.py  compare_video.py  config.py  constants.py  create_chart.py  exceptions.py  logging_config.py  video.py
synoptic_charts/calculations/: __init__.py  features.py  meteo.py
synoptic_charts/data/: __init__.py  downloader.py
synoptic_charts/rendering/: __init__.py  annotations.py  basemap.py  chart.py  layers.py
